test/classes/deitz/method/method_call2.good
method_call2.chpl:9: In method 'goo':
method_call2.chpl:10: error: currently ambiguous what 'foo' refers to
method_call2.chpl:6: note: found this method
method_call2.chpl:1: note: and this non-method
